<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_name">同学分享录</string>
   <!--  <string name="app_name">通讯录</string> -->
    
    <string name="loading">正在加载数据请稍候...</string>
    <!-- 注册 -->
    <string name="username_tip2">用户名</string>
    <string name="username_limit">仅支持中英文、数字和下划线</string>
    <string name="password_tip">密　码</string>
    <string name="password_limit">6-14位，字母区分大小写</string>
    <string name="show">显示</string>
    <string name="phone_tip">手机号</string>
    <string name="regist">注册</string>
    <string name="login">登录</string>
    <string name="register_phonebook">注册同学录账号</string>
    <string name="verifycode_tip">验证码</string>
    <string name="change">换一换</string>
    <!-- add info dialog -->
    <string name="btn_confirm">确认</string>
    <string name="btn_cancel">取消</string>
    <!-- perosn info -->
    <string name="pcard_name">姓名</string>
    <string name="pcard_phone">电话</string>
    
    <!-- MM dialog -->
    <string name="app_cancel">取消</string>
    <string name="select_info">请选择</string>
    <string-array name="select_item">
        <item>保存到本地</item>
        <item>保存并上传数据</item>
        <item>向群组发送信息</item>
        <item>从云上下载个人信息</item>
    </string-array>
    
    <string-array name="select_item_group">
        <item>获取个人群组</item>
        <item>创建群组</item>
        <item>加入群组</item>
    </string-array>
    
    <!-- progress dialog info  -->
    <string name="person_info_upload">正在上传数据，请稍候...</string>
    <string name="person_info_download">正在下载数据，请稍候...</string>
    <string name="person_group_info_download">正在下载群组数据，请稍候...</string>
    <string name="send_notification_to_group">正在向群组发送通知，请稍候...</string>
    <string name="person_info_avatar_upload">正在上传个人头像,请稍候...</string>
    <string name="group_info_avatar_upload">正在上传群组头像,请稍候...</string>
    <string name="group_info_detail_upload">正在上传群组资料,请稍候...</string>
    <string name="group_info_person_upload">正在上传群组人员,请稍候...</string>
    <string name="group_info_person_group_upload">正在上传个人群组,请稍候...</string>
    
    <!-- send notification -->
    <string name="push_messge_content">亲,我的资料变化 ，请注意更新</string>
    
    <string name="sd_noexit">SD卡不存在</string>
    
    <string name="net_error_tip">当前网络不可用，请检查你的网络设置</string>
    
    <string name="rename">备注名</string>
    <string name="move">移动到</string>
    <string name="delete">删除</string>
    <string name="open">打开</string>
    <string name="groupchat">群聊</string>
    <string name="about">关于</string>
    
    <string name="conversation_options_watermark">水印相机</string>
    <string name="conversation_options_multichat">多人聊天</string>
    <string name="conversation_options_saoyisao">扫一扫</string>
    <string name="conversation_options_richStatus">个性签名</string>
    <string name="conversation_options_dataline">传文件到电脑</string>
    <string name="conversation_options_secretfile">闪照</string>
</resources>